sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: value downto is not a member of Int
for(i <- getNombreValeurs() downto 0){
                            ^